GNOME Bugzilla – Bug 777584
menu for dictionary selection has too small size
Last modified: 2017-04-11 21:56:29 UTC
Created attachment 343958 [details] screenshot of the dictionary selection menu version: 3.20.0+28+g7dce582 Press the button left of the text-search field to open a list of dictionaries. Its content is almost not readable, since its horizontal size is very small. (see attached screenshot) The menu should open at a bigger size or at least be resizable.
Came here to file this bug. I am running fedora 25 with gnome-dictionary version 3.20.0 and have the same problem. The bug is as above: list of available dictionaries is too narrow and not resizeable. There is horizontal scrolling but that severely reduces usability.
See also https://bugzilla.gnome.org/show_bug.cgi?id=779570
Created attachment 348667 [details] [review] gdict: use natural_width for database popover Fixes too narrow database selection menu
Thanks. Pushed to master and gnome-3-24. Attachment 348667 [details] pushed as a7aa054 - gdict: use natural_width for database popover