gdict: use natural_width for database popover

Fixes too narrow database selection menu

https://bugzilla.gnome.org/show_bug.cgi?id=777584