libgdict/gdict-database-chooser.c
@@ -336,6 +336,7 @@ gdict_database_chooser_constructor (GType                  type,
   gtk_scrolled_window_set_shadow_type (GTK_SCROLLED_WINDOW (sw), GTK_SHADOW_IN);
   gtk_scrolled_window_set_min_content_height (GTK_SCROLLED_WINDOW (sw), 200);
   gtk_scrolled_window_set_max_content_height (GTK_SCROLLED_WINDOW (sw), 400);
+  gtk_scrolled_window_set_propagate_natural_width (GTK_SCROLLED_WINDOW (sw), TRUE);
   gtk_box_pack_start (GTK_BOX (chooser), sw, TRUE, TRUE, 0);
   gtk_widget_show (sw);
 
